# RayTracer

./: CMakeLists.txt  PngWriter.hpp  README.md  example.cpp  raytracing.cpp
include/: Color.hpp  Light.hpp  Math.hpp  Ray.hpp  Sphere.hpp  Surface.hpp
